# escavador-python

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  teste.py
.github/workflows/: publish.yml  run_tests_all_versions.yml  tests.yml  tests37.yml
escavador/: __init__.py  api.py  async_search.py  busca.py  busca_assincrona.py  callbacks.py  court.py  court_monitor.py  creditos.py  credits.py  diarios_oficiais.py  exceptions.py  instituicoes.py  institutions.py  journal_monitor.py  journals.py  jurisprudence.py  jurisprudencia.py  legislacao.py  legislation.py  method.py  monitoramentos_diario.py  monitoramentos_tribunal.py  motions.py  movimentacoes.py  persons.py  pessoas.py  sync_search.py  teste.py  tribunal.py  validator.py
escavador/resources/: __init__.py  busca.py  busca_assincrona.py  callback.py  callbacks.py  creditos.py  diario_oficial.py  diarios_oficiais.py  documento.py  documentos.py  endpoint.py  enums.py  instituicao.py  instituicoes.py  jurisprudencia.py  legislacao.py  monitoramento_diario.py  monitoramento_tribunal.py  monitoramentos_diario.py  monitoramentos_tribunal.py  movimentacao.py  movimentacoes.py  pessoa.py  pessoas.py  processo.py  saldo.py  tribunal.py  utils.py
escavador/resources/helpers/: consume_cursor.py  documento.py  endpoint.py  enums.py  enums_v1.py  enums_v2.py  lista_resultados.py
escavador/resources/v1/: __init__.py  callback.py  diario_oficial.py  jurisprudencia.py  monitoramento_diario.py  monitoramento_tribunal.py  processo.py
escavador/resources/v2/: processo.py
escavador/v1/: __init__.py
escavador/v1/resources/: busca.py  busca_assincrona.py  callback.py  diario_oficial.py  instituicao.py  jurisprudencia.py  legislacao.py  monitoramento_diario.py  monitoramento_tribunal.py  movimentacao.py  pessoa.py  processo.py  saldo.py  tribunal.py
escavador/v1/src/: instituicao.py  jurisprudencia.py  pessoa.py  processo.py
escavador/v2/: __init__.py
escavador/v2/resources/: buscaprocesso.py  envolvido.py  movimentacao.py  processo.py  tribunal.py
escavador/v2/src/: buscaprocesso.py  processo.py
tests/: test_escavador.py
tests/resources/helpers/: test_consume_cursor.py  test_documento.py  test_lista_resultados.py
tests/v2/: test_envolvido.py  test_movimentacao.py  test_processo.py  test_tribunal.py
