[tool.poetry]
name = "escavador"
version = "0.2.2"
description = "A library to  interact with Escavador API"
authors = [
    "Rafael <rafaelcampos@escavador.com>",
    "Gabriel <gabriel@escavador.com>"
]
readme = "README.md"
homepage = "https://www.escavador.com"
repository = "https://github.com/Escavador/escavador-python"
documentation = "https://api.escavador.com/docs/"
license = "MIT"
keywords = ["escavador", "api", "python"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.27.1"
cchardet = "^2.1.7"
python-dotenv = "^0.19.2"
ratelimit = "*"
dataclasses = "*"
importlib = "*"
importlib_metadata = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
