[tool.poetry]
name = "escavador"
version = "0.7.0"
description = "A library to interact with Escavador API"
authors = [
    "Rafael <rafaelcampos@escavador.com>",
    "Gabriel <gabriel@escavador.com>",
    "Luiz <luizcdc@escavador.com>"
]
readme = "README.md"
homepage = "https://www.escavador.com"
repository = "https://github.com/Escavador/escavador-python"
documentation = "https://api.escavador.com/docs/"
license = "MIT"
keywords = ["escavador", "api", "python"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.27.1"
python-dotenv = "^0.19.2"
ratelimit = "*"
dataclasses = "*"
importlib_metadata = "*"

[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
